app/assets/stylesheets/homepage/_product-sections.scss
/**
 * _product-sections.scss
 *
 * Styling for the main body content of the homepage.
 */

 section {
   max-width: 1445px;
   margin: 0 auto;
 }


 div#log-in-modal.modal-dialog {
   margin-top: 10%;
 }

 #override .modal-dialog {
   width: 35em;
   max-width: 100%;
   margin: 0 auto;
   padding-left: 0.7em;
 }

 // Added to get standard spacing on the expanded form
 .signup-name-password {
    margin-top: -13px;
 }

 .signup-name-password-mobile {
   h2 {
     text-align: center;
     color: #6B6E72;
     font-size: 1.1em;
     font-weight: normal;
   }
 }


 button#main-signup-button {
   width: 12em;
   line-height: 2em;
   font-size: 22px;
 }

 h4#sub-pitch {
   margin-top: 15px;
   font-size: 20px;
   margin-bottom: 45px;
   font-family: 'Proximanova';
   color: white;
   width: 700px; 
   line-height: 1.85;
 }

 h1#pitch {
   margin-bottom: 15px;
 }




 .pure-button {
   border-radius: 7px;
 }


 h1.section-banner {
   margin-top: 0em;
   font-size: 1.6em;
   font-weight: bold;

   padding-top: 1.8em;
   margin-bottom: 1em;
   margin-left: 2em;
   margin-right: 2em;
   color: #4a4a4a;
   // #end-no-reading & {
   //   padding-top: 0.2em;
   // }

   #any-family & {
     padding-top: 1.8em;
     font-size: 1.8em;
     margin-left: 1em;
     margin-right: 1em;
   }
 }

 .product-display {

   .pure-g {
     width: 100%;
     margin: 0 auto;
     padding-left: 2em;
     padding-right: 2em;
   }

   &#support-families {
     background-color: white;
   }

   &#better-teachers {
     background-color: #676487;
     h1 {
       color: white;
     }
     .pure-g {
       width: 100%;
       padding-left: 2em;
       padding-right: 2em;
     }
   }

   &#any-family {
     background-color: #F5F5F3;
     .pure-g {
       width: 100%;
       padding-bottom: 2em;
     }
     border-bottom: 1px solid #676487
   }

 }

 .little-box {
   background-color: white;
   border-radius: 0.5em;
   // width:
   position: relative;
   height: 16em;
   margin-right: 1em;
   margin-left: 1em;
   text-align: center;
   margin-bottom: 1.8em;
   img {
     margin: 0 auto;
     display: block;
     padding-top: 1em;
     width: 7.2em;
     margin-bottom: 2em;
   }
   p {
     // position: absolute;
     // bottom: 0;
     // width: 90%;
     display: block;
     margin-left: 1em;
     margin-right: 1em;
   }

 }

 .product-text {
   font-size: 1em;
   font-family: 'Proximanova';
   font-weight: bold;
   text-align: left;
   margin-top: 1em;
   margin-bottom: 4em;

   ul {
     list-style-type: none;
     padding-left: 0em;
   }


   #better-teachers & {
     p {
       color: white;
     }
     width: 100%;
     text-align: center;
   }
 }

 .product-img {
   img {
     display: block;
     margin: 0 auto;
     width: 90%;
     max-width: 18em;

     #better-teachers & {
       width: 90%;
       max-width: 16em;
     }

   }
 }





// aubrey: this only applies to views \leq mobile
@media (max-width: 35.5em) { // 568px
  .splash-container {
    padding-top: 100px;
    min-height: 500px; // 720px
  }

  div.title {
    width: 90%;
    margin: 0 auto;

      h1#pitch {
        font-size: 1.5em;
        margin-top: 0.9em;
      }
      h4#sub-pitch {
        font-size: 17px;
        line-height: 1.5;
        width: 100%;
        line-height: 1.75
      }

      // Form stuff
      .signup-setup {
      width: 90%;
      margin: 0 auto;
      }

  }

  h1.section-banner {
    margin-top: -1em;
    color: #4a4a4a;
  }



  // have a different resized background on mobile
  div.splash-container {
  background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-mobile-min.jpg')
          center
          top/cover
          no-repeat
          #726241 !important;
  }


}

 // I am confused by the below as well

 // aubrey: i believe this comment was left by the previous coder. I find it confusing. idk.

 // previous coder:
 // THIS IS THE MOBILE SHIT
 // everything up to pure-u-md
 // all the new shit
 @media (min-width: 35.5em) { // 568px
   .splash-new .splash-container {
       max-width: 1445px;
       min-height: 720px; // 720px <-- 720px
       display: block;
       margin: 0 auto;
       .title {
         text-align: center;
         color: white;
         padding-top: 8em;
         width: 40em;
         margin: 0 auto;
         font-size: 1.5em;

         h1 {
           font-size: 2.13em;
         }
       }


     h1 {
       color: white;
       text-align: center;
     }

     h4 {
       color: white;
       text-align: center;
     }

   }




 }


 @media (min-width: 35.5em) { // 5XX px

   p {
     font-size: 1.12em;
   }

 }


 // THIS IS THE TABLET SHIT
 @media (min-width: 48em) { // 768px

   #override .modal-dialog {
     // width: 35em;
     // max-width: 100%;
     margin: 0 auto;
     padding-left: 0em;
   }



   .splash {
     min-height: 750px;
   }

   body#override .splash {
     background-color: #F5F5F3
   }

   .product-display {


     .pure-g {
       width: 90%;
       margin: 0 auto;

     }

     &#support-families {
       background-color: white;
       .pure-g {
         width: 100%;
       }
     }

     &#better-teachers {
       background-color: #676487;
       h1 {
         color: white;
       }
       .pure-g {
         width: 100%;
       }
     }

     &#any-family {
       background-color: #F5F5F3;
       .pure-g {
         width: 100%;
         padding-bottom: 7em;
       }
       border-bottom: 1px solid #676487
     }

   }

   .little-box {
     background-color: white;
     border-radius: 0.5em;
     // width:
     position: relative;
     height: 18em;
     margin-right: 1em;
     margin-left: 1em;
     text-align: center;
     img {
       margin: 0 auto;
       display: block;
       padding-top: 1em;
       width: 7.2em;
       margin-bottom: 2em;
     }
     p {

       // position: absolute;
       // bottom: 0;
       // width: 90%;
       display: block;
       margin-left: 1em;
       margin-right: 1em;
     }

   }

   .product-text {
     font-size: 1em;
     font-family: 'Proximanova';
     font-weight: bold;
     text-align: left;
     margin-top: 6em;

     ul {
       list-style-type: none;
       padding-left: 0em;
     }


     #better-teachers & {
       p {
         color: white;
       }
       width: 15em;
       text-align: justify;
     }
   }

   .product-img {
     img {
       display: block;
       margin: 0 auto;
       width: 21em;
       max-width: 21em;

       #better-teachers & {
         width: 15em;
         max-width: 18em;
         padding-left: 1em;
         padding-right: 1em;
       }

     }
   }

   h1.section-banner {
     font-size: 2.5em;
     font-weight: bold;

     padding-top: 1.1em;
     margin-bottom: 1em;

     #any-family & {
       font-size: 2em;
     }
   }

 }

 // FULL SCREEN DESKTOP
 @media (min-width: 64em) { // 1024px
    body#override .splash {
      background-color: #F5F5F3
    }

   .splash-new .splash-container {
    height: 600px;
   }


    .splash-container {
       padding-top: 0px;
    }

   .product-display {

     .pure-g {
       width: 75%;
       margin: 0 auto;

     }

     &#support-families {
       background-color: white;;
       .pure-g {
         width: 85%;
       }
     }

     &#better-teachers {
       background-color: #676487;
       h1 {
         color: white;
       }
       .pure-g {
         width: 85%;
       }
     }

     &#any-family {
       background-color: #F5F5F3;
       .pure-g {
         width: 80%;
         padding-bottom: 7em;
       }
       border-bottom: 1px solid #676487
     }

   }

   .little-box {
     background-color: white;
     border-radius: 0.5em;
     // width:
     position: relative;
     height: 16em;
     margin-right: 1em;
     margin-left: 1em;
     text-align: center;
     img {
       margin: 0 auto;
       display: block;
       padding-top: 1em;
       width: 7em;
       margin-bottom: 2em;
     }
     p {

       // position: absolute;
       // bottom: 0;
       // width: 90%;
       display: block;
       margin-left: 1em;
       margin-right: 1em;
     }

   }

   .product-text {
     font-size: 1em;
     font-family: 'Proximanova';
     font-weight: bold;
     text-align: left;
     margin-top: 10px;

     ul {
       list-style-type: none;
       padding-left: 0em;
     }


     #better-teachers & {
       p {
         color: white;
       }
       width: 15em;
       text-align: justify;
     }
   }

   .product-img {
     img {
       display: block;
       margin: 0 auto;
       width: 21em;

       #better-teachers & {
         width: 18em;
       }

     }
   }

   h1.section-banner {
     font-size: 2.5em;
     font-weight: bold;

     padding-top: 1.1em;
     margin-bottom: 1em;

     #any-family & {
       font-size: 2em;
     }
   }

 }


 // EXTRA LARGE
 @media (min-width: 80em) { // 1280px
     body#override .splash {
       background-color: #F5F5F3
     }

   .product-display {

     .pure-g {
       width: 60%;
       margin: 0 auto;

     }

     &#support-families {
       background-color: white;
       .pure-g {
         width: 70%;
       }
     }

     &#better-teachers {
       background-color: #676487;
       h1 {
         color: white;
       }
       .pure-g {
         width: 70%;
       }
     }

     &#any-family {
       background-color: #F5F5F3;
       .pure-g {
         width: 80%;
         padding-bottom: 7em;
       }
       border-bottom: 1px solid #676487
     }

   }

   .little-box {
     background-color: white;
     border-radius: 0.5em;
     // width:
     position: relative;
     height: 16em;
     margin-right: 1em;
     margin-left: 1em;
     text-align: center;
     img {
       margin: 0 auto;
       display: block;
       padding-top: 1em;
       width: 7em;
       margin-bottom: 2em;
     }
     p {

       // position: absolute;
       // bottom: 0;
       // width: 90%;
       display: block;
       margin-left: 1em;
       margin-right: 1em;
     }

   }

   .product-text {
     font-size: 1em;
     font-family: 'Proximanova';
     font-weight: bold;
     text-align: left;
     margin-top: 10px;

     ul {
       list-style-type: none;
     }


     #better-teachers & {
       p {
         color: white;
       }
       width: 15em;
       text-align: justify;
     }
   }

   .product-img {
     img {
       display: block;
       margin: 0 auto;
       width: 21em;

       #better-teachers & {
         width: 20em;
       }

     }
   }

   h1.section-banner {
     font-size: 2.5em;
     font-weight: bold;

     padding-top: 1.1em;
     margin-bottom: 1em;

     #any-family & {
       font-size: 2em;
     }
   }

 }

